.vscode/Template_uv4.log
*** Using Compiler 'V6.22', folder: 'E:\ARM\keil5MDK\5.40\ARM\ARMCLANG\Bin'
Build target 'Template'
../User/BSP/src/hw_oled.c(200): error: variable-sized object may not be initialized
  200 |         uint8_t buff[Count] = {0x40, Data};
      |                      ^~~~~
1 error generated.
compiling hw_oled.c...
".\Objects\Template.axf" - 1 Error(s), 0 Warning(s).
Target not created.
Build Time Elapsed:  00:00:01
